refactor: use UUID as primary user identifier from Keycloak
GatewayAuthFilter reads X-User-UUID instead of X-User-ID. Long userId
resolved lazily from local user table via UserIdResolver interface.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>